<resources>
    <!-- The author is responsible for this data -->
    <!-- @author Maximilian Knodt-->
    <string name="app_name">SET</string>
    <string name="single_player">Singleplayer</string>
    <string name="multi_player">Multiplayer</string>
    <string name="settings">Settings</string>
    <string name="set">SET</string>
    <string name="game_field">Field of Cards</string>
    <string name="pause">Pause</string>
    <string name="highscore">Highscore</string>
    <string name="language">Language</string>
    <string name="rulesSP">Singleplayer Rules</string>
    <string name="rulesMP">Multiplayer Rules</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="timer">Time to choose set</string>
    <string name="deduction">Point Deduction</string>
    <string name="Suspension">Suspension</string>
    <string name="switchOn">on</string>
    <string name="deduction_on">One point deduction for wrong set</string>
    <string name="suspension_on">Suspended until next player calls set</string>
    <string name="timerText">Time for choosing a Set</string>
    <string name="switchOff">off</string>
    <string name="game_type">Game type:</string>
    <string name="game_start">Game start:</string>
    <string name="rules">Rules:</string>
    <string name="congrats">Congratulations</string>
    <string name="congrats_text">You have successfully completed the game!</string>
    <string name="main_menu">Main Menu</string>
    <string name="new_game">New Game</string>
    <string name="winner">Winner:</string>
    <string name="deduction_off">No point deduction for wrong set</string>
    <string name="suspension_off">No suspension until next player calls set</string>
    <string name="theme">Theme</string>
    <string name="light_mode_on">Light Mode</string>
    <string name="dark_mode_on">Dark Mode</string>
    <string name="language_selection">Language selection</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="twenty">20</string>
    <string name="dark_mode_default">System settings</string>
    <string name="language_changed">Restart for the language to change</string>
    <string name="zero" translatable="false">0</string>
    <string name="zero_timer" translatable="false">00:00:00</string>
    <string name="string_default" translatable="false">default</string>
    <string name="yes" translatable="false">yes</string>
    <string name="no" translatable="false">no</string>
    <string name="english_value" translatable="false">en</string>
    <string name="german_value" translatable="false">de</string>
    <!-- @author Linus Kurze-->
    <string name="game_mode">Game mode:</string>
    <string name="duration">Time:</string>
    <string name="points">Points:</string>
    <string name="cards_left">Cards left:</string>
    <string name="selection_time">Time left:</string>
    <string name="selected_player">Player:</string>
    <string name="cancel">Cancel</string>
    <string name="and">and</string>
    <string name="resume_game">Resume Game</string>
    <string name="short_game">Short Game</string>
    <string name="new_short_game">new Short Game</string>
    <string name="new_normal_game">new Normal Game</string>
    <string name="normal_game">Normal Game</string>
    <string name="message_select_3_cards">Please select three cards for taking a set.</string>
    <string name="message_take_set_successful">The set has been taken successfully.</string>
    <string name="message_take_set_incorrect">The set selected was incorrect.</string>
    <string name="message_set_selection_ended">The set selection ended.</string>
    <string name="press_back_again">Press back again to exit.</string>
    <string name="no_game_to_resume">There is no game to resume.</string>
    <string name="take_set">Take Set</string>
    <string name="add_cards">Add cards</string>
    <string name="message_add_cards_successful">Added three cards successfully.</string>
    <string name="message_add_cards_not_possible">Adding cards is not possible.</string>
    <string name="message_player_is_suspended">The selected player is suspended.</string>
    <string name="message_player_is_selected">Player has been successfully selected.</string>
    <string name="congrats_multiplayer_singular">The winner is:</string>
    <string name="congrats_multiplayer_plural">The winners are:</string>
    <string name="add_player">Add Player</string>
    <string name="remove_player">Remove Player</string>
    <string name="player_name">Player Name</string>
    <string name="player">Player</string>
    <string name="start_game">Start game</string>
    <string name="message_added_player">Added player successfully.</string>
    <string name="message_can_not_add_player">Can not add any more players.</string>
    <string name="message_deleted_player">Deleted player successfully.</string>
    <string name="message_can_not_delete_player">Can not delete any more players.</string>
    <string name="shared_start_sentence_begin">Hey, \nI have finished a </string>
    <string name="shared_start_sentence_end">in the Set-App.</string>
    <string name="loading">loading...</string>
</resources>