<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/single_player_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- @author Maximilian Knodt -->
    <!-- @author Linus Kurze -->

    <TextView
        android:id="@+id/textview_Singleplayer_Headline"
        style="@style/TextView_Base.Headline.Linear"
        android:text="@string/single_player" />

    <View
        android:id="@+id/view_Singleplayer_Underline"
        style="@style/View_Base.Underline_Linear"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/button_Singleplayer_Screen_NG"
        style="@style/Button_Base.LinearLayout"
        android:text="@string/new_normal_game" />

    <Button
        android:id="@+id/button_Singleplayer_Screen_SG"
        style="@style/Button_Base.LinearLayout"
        android:text="@string/new_short_game" />

    <Button
        android:id="@+id/button_Singleplayer_Screen_Resume"
        style="@style/Button_Base.LinearLayout"
        android:text="@string/resume_game" />

</LinearLayout>