<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- @author Maximilian Knodt-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_End_Right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_End_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_End_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_End_Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_End_Buttondivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_End_Textdivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_End_VerticalHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_EndTextdivider_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="72dp" />

    <TextView
        android:id="@+id/textview_Game_End_Screen_Headline"
        style="@style/TextView_Base.Headline"
        android:text="@string/congrats"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_End_Right"
        app:layout_constraintStart_toStartOf="@+id/guideline_Game_End_Left"
        app:layout_constraintTop_toTopOf="@+id/guideline_Game_End_Top" />

    <View
        android:id="@+id/view_Start_Underline"
        style="@style/View_Base.Underline_Constraint"
        app:layout_constraintBottom_toTopOf="@+id/textView_Game_End_Screen_Headline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_End_Right"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/guideline_Game_End_Left"
        app:layout_constraintTop_toBottomOf="@+id/textview_Game_End_Screen_Headline" />

    <TextView
        android:id="@+id/textView_Game_End_Screen_Headline2"
        android:text="@string/congrats_text"
        style="@style/TextView_Base.Headline.Headline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_End_Right"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="@+id/guideline_Game_EndTextdivider_Left"
        app:layout_constraintTop_toBottomOf="@+id/view_Start_Underline" />

    <Button
        android:id="@+id/button_Game_End_Screen_New_Game"
        android:text="@string/new_game"
        style="@style/Button_Base"
        app:layout_constraintBottom_toTopOf="@+id/button_Game_End_Screen_Menu"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_End_Right"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="@+id/guideline_Game_End_Buttondivider"
        app:layout_constraintTop_toTopOf="@+id/guideline_Game_End_VerticalHalf" />

    <Button
        android:id="@+id/button_Game_End_Screen_Menu"
        style="@style/Button_Base"
        android:text="@string/main_menu"
        app:layout_constraintBottom_toTopOf="@+id/guideline_Game_End_Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_End_Right"
        app:layout_constraintStart_toStartOf="@+id/guideline_Game_End_Buttondivider"
        app:layout_constraintTop_toBottomOf="@+id/button_Game_End_Screen_New_Game" />


    <TableLayout
        android:id="@+id/tableLayout_Game_End"
        style="@style/Table"
        app:layout_constraintBottom_toTopOf="@+id/guideline_Game_End_VerticalHalf"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_End_Textdivider"
        app:layout_constraintStart_toStartOf="@+id/guideline_Game_EndTextdivider_Left"
        app:layout_constraintTop_toBottomOf="@+id/textView_Game_End_Screen_Headline2">

        <TableRow style="@style/Table_Row">

            <TextView
                android:id="@+id/textView_Game_End_Screen_Time_Header"
                style="@style/TextView_Base.TableRow"
                android:text="@string/duration" />

            <TextView
                android:id="@+id/textView_Game_End_Screen_Time_Body"
                style="@style/TextView_Base.TableRow.Normal"
                android:text="@string/zero_timer" />
        </TableRow>

        <TableRow style="@style/Table_Row">

            <TextView
                android:id="@+id/textView_Game_End_Screen_Points_Header"
                style="@style/TextView_Base.TableRow"
                android:text="@string/points" />

            <TextView
                android:id="@+id/textView_Game_End_Screen_Points_Body"
                style="@style/TextView_Base.TableRow.Normal"
                android:text="@string/zero" />
        </TableRow>

        <TableRow style="@style/Table_Row">

            <TextView
                android:id="@+id/textView_Game_End_Screen_Rules_Header"
                style="@style/TextView_Base.TableRow"
                android:text="@string/rules" />

            <TextView
                android:id="@+id/textView_Game_End_Screen_Rules_Body"
                style="@style/TextView_Base.TableRow.Normal"
                android:text="TextView" />
        </TableRow>

        <TableRow style="@style/Table_Row">

            <TextView
                android:id="@+id/textView_Game_End_Screen_Type_Header"
                style="@style/TextView_Base.TableRow"
                android:text="@string/game_type" />

            <TextView
                android:id="@+id/textView_Game_End_Screen_Type_Body"
                style="@style/TextView_Base.TableRow.Normal"
                android:text="Game Type" />
        </TableRow>

        <TableRow style="@style/Table_Row">

            <TextView
                android:id="@+id/textView_Game_End_Screen_Start_Header"
                style="@style/TextView_Base.TableRow"
                android:text="@string/game_start" />

            <TextView
                android:id="@+id/textView_Game_End_Screen_Start_Body"
                style="@style/TextView_Base.TableRow.Normal"
                android:text="00.00.2022" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>