<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- @author Maximilian Knodt-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_Right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Game_Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="62dp" />

    <View
        android:id="@+id/view_Game_DividerFieldSettings"
        style="@style/View_Base.Tablecorner"
        android:background="#777676"
        app:layout_constraintBottom_toTopOf="@+id/guideline_Game_Bottom"

        app:layout_constraintStart_toStartOf="@+id/guidelineDivider"
        app:layout_constraintTop_toTopOf="@+id/guideline_Game_Top"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_Game_Set"
        android:text="@string/take_set"
        style="@style/Button_Base.Set"
        app:layout_constraintBottom_toTopOf="@+id/guideline_Game_Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_Right"
        app:layout_constraintStart_toStartOf="@+id/guidelineDivider" />

    <ImageButton
        android:id="@+id/imageButton_Game_Pause"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/pause"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_Right"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_pause" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Game_Field"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:contentDescription="@string/game_field"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline_Game_Bottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDivider"
        app:layout_constraintStart_toStartOf="@+id/guideline_Game_Left"
        app:layout_constraintTop_toTopOf="@+id/guideline_Game_Top" />

    <TextView
        android:id="@+id/duration_content"
        android:text="@string/zero_timer"
        style="@style/TextView_Base.Constraint.Normal"
        app:layout_constraintBottom_toTopOf="@+id/cards_left_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_Right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/duration_text"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_Game_Pause" />

    <TextView
        android:id="@+id/duration_text"
        android:text="@string/duration"
        style="@style/TextView_Base.Constraint.Header"
        app:layout_constraintBottom_toTopOf="@+id/cards_left_text"
        app:layout_constraintEnd_toStartOf="@+id/duration_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_Game_DividerFieldSettings"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_Game_Pause" />

    <TextView
        android:id="@+id/cards_left_text"
        android:text="@string/cards_left"
        style="@style/TextView_Base.Constraint.Header"
        app:layout_constraintBottom_toTopOf="@+id/points_text"
        app:layout_constraintEnd_toStartOf="@+id/cards_left_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_Game_DividerFieldSettings"
        app:layout_constraintTop_toBottomOf="@+id/duration_text" />

    <TextView
        android:id="@+id/cards_left_content"
        android:text="@string/zero"
        style="@style/TextView_Base.Constraint.Normal"
        app:layout_constraintBottom_toTopOf="@+id/points_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_Right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cards_left_text"
        app:layout_constraintTop_toBottomOf="@+id/duration_content" />

    <TextView
        android:id="@+id/points_content"
        android:text="@string/zero"
        style="@style/TextView_Base.Constraint.Normal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineVerticalHalf"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_Right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/points_text"
        app:layout_constraintTop_toBottomOf="@+id/cards_left_content" />

    <TextView
        android:id="@+id/points_text"
        android:text="@string/points"
        style="@style/TextView_Base.Constraint.Header"
        app:layout_constraintBottom_toTopOf="@+id/guidelineVerticalHalf"
        app:layout_constraintEnd_toStartOf="@+id/points_content"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_Game_DividerFieldSettings"
        app:layout_constraintTop_toBottomOf="@+id/cards_left_text" />

    <TextView
        android:id="@+id/textView_Game_playerlist"
        style="@style/TextView_Base.Constraint.Normal"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/button_Game_Set"
        app:layout_constraintEnd_toStartOf="@+id/guideline_Game_Right"
        app:layout_constraintStart_toStartOf="@+id/guidelineDivider"
        app:layout_constraintTop_toTopOf="@+id/guidelineVerticalHalf" />

</androidx.constraintlayout.widget.ConstraintLayout>